--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev":"nodemon"
+    "dev": "nodemon"
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/navarro-hubess/node-pos.git"
@@ -15,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5"
   },
   "devDependencies": {
